mobile.css
@media only screen and (max-width: 730px){
    #user>a:nth-of-type(1),#user>a:nth-of-type(1)>button{
        width: 0;
        color: transparent;
    }
    nav{
        align-items: center;
    }
    .container div{
        margin: auto;
    }
    nav h1{
        font-size: 20px;

        /* vertical-align: middle; */
    }
    #footer>.div1{
        margin: 15px 0 0 10px;
        /* margin-left: 5px; */
        flex: 2;
    }
}
@media only screen and (max-width: 1000px) {
    nav>div:nth-of-type(1) *{
        color: transparent;
        background-color: transparent;
    }
    nav>div:nth-of-type(1){
        flex: 0;
        position: absolute;
        /* background-color: transparent; */
    }
    nav{
        background-color: rgb(33, 33, 33);
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
    }
    .container{
        flex-wrap: wrap;
    }
    .container div:hover{
        width: auto;
    }
    .sign{
        width: 8vw;
    }
}

